--- a/index.html
+++ b/index.html
@@ -139,44 +139,27 @@
 </section>
 
 <section class="hero is-small">
-  <!-- <div class="hero-body"> -->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <!-- <div id="results-carousel" class="carousel results-carousel"> -->
       <div class="container">
       <div class="item">
       <div class="column is-centered has-text-centered">
-        <img src="static/images/pipeline.png" alt="pipeline"/>
+        <img src="static/images/teaser.png" alt="pipeline"/>
       <h2 class="subtitle">
-        We propose a novel method, AttentionHand, for text-driven controllable hand image generation.
-        (1) In the data preparation phase, we prepare global and local RGB images, global and local hand mesh images, bounding box, and text prompt.
-        (2) In the encoding phase, we get global and local latent image embeddings from VQ-GAN, and text embedding from CLIP.
-        (3) In the conditioning phase, we refine image embeddings through the text attention stage, and obtain the diffusion feature through the visual attention stage.
-        (4) In the decoding phase, we generate a new hand image from the diffusion feature.
+        We introduce EgoWorld, a novel two-stage framework that reconstructs egocentric view from rich exocentric observations, including depth maps, 3D hand poses, and textual descriptions.
       </h2>
 	  </div>
     </div>
   </div>
- <!--  </div> -->
   </div>
   </div>
- <!--  </div> -->
 </section>
-
+<!-- 
 <section class="section hero is-light">
   <div class="container is-max-desktop">
-    <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <!-- div class="item">
-          <p style="margin-bottom: 30px">
-        <video poster="" id="tree" autoplay controls muted loop height="100%">
-          <source src="static/figures/video.mp4"
-          type="video/mp4">
-        </video>
-        </p>
-        </div -->
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
@@ -195,20 +178,9 @@
         </div>
       </div>
     </div>
-    <!--/ Abstract. -->
   </div>
 </section>
 
-<!-- <section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title has-text-centered">Video</h2>
-      <center>
-        <iframe width="630" height="354" src="https://www.youtube.com/embed/9EWs2IX4cus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      </center>
-    </div>
-  </div>
-</section> -->
 
 <section class="hero is-small">
   <div class="hero-body">
@@ -450,18 +422,18 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <section class="section hero" id="BibTeX">
   <div class="container is-max-desktop">
 <!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content"> -->
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2024attentionhand,
-  author    = {Park, Junho and Kong, Kyeongbo and Kang, Suk-Ju},
-  title     = {AttentionHand: Text-driven Controllable Hand Image Generation for 3D Hand Reconstruction in the Wild},
-  journal   = {European Conference on Computer Vision},
-  year      = {2024},
+    <pre><code>@article{park2025egoworld,
+  author    = {Park, Junho and Ye, Andrew Sangwoo and Kwon, Taein},
+  title     = {EgoWorld: Translating Exocentric View to Egocentric View using Rich Exocentric Observations},
+  journal   = {arXiv},
+  year      = {2025},
 }</code></pre>
   </div>
 </section>
