--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>AI Lab, LG Electronics,</span>
-            <span class="author-block"><sup>2</sup>ETH Zurich,</span>
+            <span class="author-block"><sup>2</sup>KAIST,</span>
             <span class="author-block"><sup>3</sup>Visual Geometry Group, University of Oxford</span>
           </div>
 
