--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="publication-links">
               
               <span class="link-block">
-                <a href="https://redorangeyellowy.github.io/EgoWorld/" target="_blank" 
+                <a href="https://arxiv.org/abs/2506.17896" target="_blank" 
                 class="external-link button is-normal is-rounded is-dark">
                 <!-- <a target="_blank" class="external-link button is-normal is-rounded is-dark"> -->
                   <span class="icon">
@@ -432,7 +432,7 @@
     <pre><code>@article{park2025egoworld,
   author    = {Park, Junho and Ye, Andrew Sangwoo and Kwon, Taein},
   title     = {EgoWorld: Translating Exocentric View to Egocentric View using Rich Exocentric Observations},
-  journal   = {arXiv},
+  journal   = {arXiv preprint arXiv:2506.17896},
   year      = {2025},
 }</code></pre>
   </div>
