--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta property="og:title" content="EgoWorld: Translating Exocentric View to Egocentric View using Rich Exocentric Observations"/>
     <meta property="og:url" content="https://redorangeyellowy.github.io/EgoWorld/"/>
@@ -38,7 +39,7 @@
   <div class="hero-body">
     <div class="container is-max-widescreen">
       <!-- <div class="columns is-centered"> -->
-        <div class="column has-text-centered">
+        <div class="column is-12 has-text-centered">
           <h1 class="title is-1 publication-title">EgoWorld:<br>Translating Exocentric View to Egocentric View<br>using Rich Exocentric Observations</h1>
           <h1 class="title is-3">arXiv 2025</h1>
         </div>
@@ -50,7 +51,7 @@
   <div class="hero-body">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
-        <div class="column has-text-centered">
+        <div class="column is-12 has-text-centered">
 		      <div class="is-size-3 publication-authors">
           </div>
           
