--- a/index.html
+++ b/index.html
@@ -427,15 +427,19 @@
 
 <section class="section hero" id="BibTeX">
   <div class="container is-max-desktop">
-<!-- <section class="section" id="BibTeX">
-  <div class="container is-max-desktop content"> -->
-    <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2025egoworld,
+    <div class="columns is-centered">
+      <div class="column is-12">
+        <h2 class="title is-4 has-text-centered">BibTeX</h2>
+        <div class="box" style="overflow-x: auto; white-space: pre-wrap; word-break: break-word;">
+          <pre style="font-size: 0.85rem; line-height: 1.4;"><code>@article{park2025egoworld,
   author    = {Park, Junho and Ye, Andrew Sangwoo and Kwon, Taein},
   title     = {EgoWorld: Translating Exocentric View to Egocentric View using Rich Exocentric Observations},
   journal   = {arXiv preprint arXiv:2506.17896},
   year      = {2025},
 }</code></pre>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
