--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
       <div class="column is-centered has-text-centered">
         <img src="static/images/teaser.png" alt="pipeline"/>
       <h2 class="subtitle">
-        We introduce EgoWorld, a novel two-stage framework that reconstructs egocentric view from rich exocentric observations, including depth maps, 3D hand poses, and textual descriptions.
+        EgoWorld translates a single exocentric view into an egocentric view. 
+        By leveraging rich multimodal exocentric observations, such as projected point clouds, 3D hand poses, and textual descriptions, EgoWorld is able to generate high-quality egocentric views, even in unseen scenarios. 
+        Each observed modality provides complementary information that contributes to the accurate and realistic reconstruction of the egocentric view.
       </h2>
 	  </div>
     </div>
@@ -175,6 +177,22 @@
     </div>
   </div>
 </section>
+
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Method</h2>
+          <div class="column is-centered has-text-centered">
+                <img src="static/images/method.png" alt="method" width="700px"/>
+          </div>
+		        <p class="content has-text-justified">
+              EgoWorld has a two-stage pipeline : (1) Exocentric view observation \( \Phi_{exo} )\, which extracts diverse observations from the exocentric view, including projected point clouds, 3D hand poses, and textual descriptions; and (2) egocentric view reconstruction \( \Phi_{ego} )\, which reconstructs the egocentric view based on cues from the exocentric view observation.
+            </p>
+      </div>
+    </div>
+  </div>
+</section> 
 
 <!-- 
 <section class="hero is-small">
@@ -273,29 +291,6 @@
   </div>
 </section>
 
-<section class="section hero is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Motivation</h2>
-		<div class="column is-centered has-text-centered">
-          <img src="static/images/intro.png" alt="intro" width="700px"/>
-		</div>
-		<p class="content has-text-justified">
-            3D hand mesh reconstruction becomes difficult <b>when hands are in the wild, due to insufficiency of in-the-wild 3D hand datasets.</b>
-            Compared to in-the-lab datasets, acquisition in-the-wild datasets is challenging due to unpredictable conditions such as weather, lighting, cost of sensors, and safety issues on crowded roads and public places.
-            Even if an in-the-wild dataset is collected, data diversity would be poor due to the aforementioned severe constraints.
-            <b>Although arbitrary labels can be obtained through pseudo annotation, the precision and accuracy is still poor compared to in-the-lab datasets as shown in the figure (a).</b>
-            To tackle this problem, several synthetic datasets have introduced.
-            However, <b>since the hand and background images are synthesized out of harmony, they consist of unnatural and unrealistic hand images as shown in the figure (b).</b> 
-            Hence, it is difficult to overcome the domain gap between indoor and outdoor scenes with synthetic datasets.
-            To address these issues, we propose AttentionHand, a new method for the text-driven controllable hand image generation.
-            <b>AttentionHand is designed to create accurate, natural, realistic and harmonious in-the-wild hand images easily and infinitely as shown in the figure (c).</b>
-        </p>
-      </div>
-    </div>
-  </div>
-</section> 
 
 <section class="section hero">
   <div class="container is-max-desktop">
