--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <img src="static/images/method.png" alt="method" width="700px"/>
           </div>
 		        <p class="content has-text-justified">
-              EgoWorld has a two-stage pipeline : (1) Exocentric view observation \( \Phi_{exo} )\, which extracts diverse observations from the exocentric view, including projected point clouds, 3D hand poses, and textual descriptions; and (2) egocentric view reconstruction \( \Phi_{ego} )\, which reconstructs the egocentric view based on cues from the exocentric view observation.
+              EgoWorld has a two-stage pipeline : (1) Exocentric view observation \( \Phi_{exo} \), which extracts diverse observations from the exocentric view, including projected point clouds, 3D hand poses, and textual descriptions; and (2) egocentric view reconstruction \( \Phi_{ego} \), which reconstructs the egocentric view based on cues from the exocentric view observation.
             </p>
       </div>
     </div>
