--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method</h2>
           <div class="column is-centered has-text-centered">
-                <img src="static/images/method.png" alt="method" width="700px"/>
+            <img src="static/images/method.png" alt="method" width="700px"/>
           </div>
 		        <p class="content has-text-justified">
               <!-- EgoWorld has a two-stage pipeline : (1) Exocentric view observation \( \Phi_{exo} \), which extracts diverse observations from the exocentric view, including projected point clouds, 3D hand poses, and textual descriptions; and (2) egocentric view reconstruction \( \Phi_{ego} \), which reconstructs the egocentric view based on cues from the exocentric view observation. -->
@@ -205,6 +205,126 @@
     </div>
   </div>
 </section> 
+
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Results on H2O</h2>
+          <div class="column is-centered has-text-centered">
+            <img src="static/images/exp_comp_h2o.png" alt="method" width="700px"/>
+          </div>
+      </div>
+    </div>
+  </div>
+</section> 
+
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Results on TACO</h2>
+          <div class="column is-centered has-text-centered">
+            <img src="static/images/exp_comp_taco.png" alt="method" width="700px"/>
+          </div>
+      </div>
+    </div>
+  </div>
+</section> 
+
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Real-World Generalization</h2>
+          <div class="column is-centered has-text-centered">
+            <img src="static/images/exp_itw.png" alt="method" width="700px"/>
+          </div>
+      </div>
+    </div>
+  </div>
+</section> 
+
+<section class="section hero">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Effect of Conditioning Modalities</h2>
+          <div class="column is-centered has-text-centered">
+            <img src="static/images/exp_guide.png" alt="method" width="700px"/>
+          </div>
+		        <p class="content has-text-justified">
+              TBD
+            </p>
+      </div>
+    </div>
+  </div>
+</section> 
+
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Backbone of Image Completion</h2>
+          <div class="column is-centered has-text-centered">
+            <img src="static/images/exp_recon.png" alt="method" width="700px"/>
+          </div>
+		        <p class="content has-text-justified">
+              TBD
+            </p>
+      </div>
+    </div>
+  </div>
+</section> 
+
+<section class="section hero">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">3D Egocentric Hand Pose Estimation from Exocentric View</h2>
+          <div class="column is-centered has-text-centered">
+            <img src="static/images/exp_egopose.png" alt="method" width="700px"/>
+          </div>
+		        <p class="content has-text-justified">
+              TBD
+            </p>
+      </div>
+    </div>
+  </div>
+</section> 
+
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Incorrect Conditioning Modalities</h2>
+          <div class="column is-centered has-text-centered">
+            <img src="static/images/exp_incrt.png" alt="method" width="700px"/>
+          </div>
+		        <p class="content has-text-justified">
+              TBD
+            </p>
+      </div>
+    </div>
+  </div>
+</section> 
+
+<section class="section hero">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Generation Consistency</h2>
+          <div class="column is-centered has-text-centered">
+            <img src="static/images/exp_consi.png" alt="method" width="700px"/>
+          </div>
+		        <p class="content has-text-justified">
+              TBD
+            </p>
+      </div>
+    </div>
+  </div>
+</section> 
+
 
 <!-- 
 <section class="hero is-small">
