--- a/index.html
+++ b/index.html
@@ -210,20 +210,23 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Results on H2O</h2>
+        <h2 class="title is-3">Comparisons on H2O</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/exp_comp_h2o.png" alt="method" width="700px"/>
+          </div>
+          <div class="column is-centered has-text-centered">
+            <img src="static/images/exp_comp_h2o_quan.png" alt="method" width="700px"/>
           </div>
       </div>
     </div>
   </div>
 </section> 
 
-<section class="section hero is-light">
+<section class="section hero">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Results on TACO</h2>
+        <h2 class="title is-3">Comparisons on TACO</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/exp_comp_taco.png" alt="method" width="700px"/>
           </div>
