--- a/index.html
+++ b/index.html
@@ -163,9 +163,11 @@
 </section>
 
 <section class="section hero is-light">
-  <div class="container is-max-desktop">
+  <!-- <div class="container is-max-desktop"> -->
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <!-- <div class="column is-four-fifths"> -->
+      <div class="column is-12">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
