--- a/index.html
+++ b/index.html
@@ -184,15 +184,14 @@
 </section>
 
 <section class="section hero">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-12">
         <h2 class="title is-3">Method</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/method.png" alt="method" width="700px"/>
           </div>
 		        <p class="content has-text-justified">
-              <!-- EgoWorld has a two-stage pipeline : (1) Exocentric view observation \( \Phi_{exo} \), which extracts diverse observations from the exocentric view, including projected point clouds, 3D hand poses, and textual descriptions; and (2) egocentric view reconstruction \( \Phi_{ego} \), which reconstructs the egocentric view based on cues from the exocentric view observation. -->
               EgoWorld consists of two stages: exocentric view observation \( \Phi_{exo}$ \) and egocentric view reconstruction \( \Phi_{ego} \).
               First, given a single exocentric image \( {I}_{exo} \in \mathbb{R}^{H \times W \times 3} \), \( \Phi_{exo} \) predicts a corresponding sparse egocentric RGB map \( {S}_{ego} \in \mathbb{R}^{H \times W \times 3} \), 3D egocentric hand pose \( {P}_{ego} \in \mathbb{R}^{N \times 3} \), and a textual description \( T_{exo} \).
               \( H \) and \( W \) indicates height and width of \( {I}_{exo} \), and \( N \) indicates the number of keypoints of the hand.
@@ -209,9 +208,9 @@
 </section> 
 
 <section class="section hero is-light">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-12">
         <h2 class="title is-3">Comparisons on H2O</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/exp_comp_h2o.png" alt="method" width="700px"/>
@@ -225,9 +224,9 @@
 </section> 
 
 <section class="section hero">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-12">
         <h2 class="title is-3">Comparisons on TACO</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/exp_comp_taco.png" alt="method" width="700px"/>
@@ -238,9 +237,9 @@
 </section> 
 
 <section class="section hero is-light">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-12">
         <h2 class="title is-3">Real-World Generalization</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/exp_itw.png" alt="method" width="700px"/>
@@ -251,9 +250,9 @@
 </section> 
 
 <section class="section hero">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-12">
         <h2 class="title is-3">Effect of Conditioning Modalities</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/exp_guide.png" alt="method" width="700px"/>
@@ -267,9 +266,9 @@
 </section> 
 
 <section class="section hero is-light">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-12">
         <h2 class="title is-3">Backbone of Image Completion</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/exp_recon.png" alt="method" width="700px"/>
@@ -283,9 +282,9 @@
 </section> 
 
 <section class="section hero">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-12">
         <h2 class="title is-3">3D Egocentric Hand Pose Estimation from Exocentric View</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/exp_egopose.png" alt="method" width="700px"/>
@@ -299,9 +298,9 @@
 </section> 
 
 <section class="section hero is-light">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-12">
         <h2 class="title is-3">Incorrect Conditioning Modalities</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/exp_incrt.png" alt="method" width="700px"/>
@@ -315,9 +314,9 @@
 </section> 
 
 <section class="section hero">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-12">
         <h2 class="title is-3">Generation Consistency</h2>
           <div class="column is-centered has-text-centered">
             <img src="static/images/exp_consi.png" alt="method" width="700px"/>
