--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </div>
 </section>
 
-<section class="hero is-small">
+<!-- <section class="hero is-small"> -->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
