--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
 
 <!-- <section class="hero is-small"> -->
 <section class="hero teaser">
-  <div class="container is-max-desktop">
+  <!-- <div class="container is-max-desktop"> -->
+  <div class="container is-max-widescreen">
     <div class="hero-body">
       <div class="container">
       <div class="item">
