--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-12">
         <h2 class="title is-3">Comparisons on H2O</h2>
-          <div class="column is-centered has-text-centered">
-            <img src="static/images/exp_comp_h2o.png" alt="method" width="700px"/>
+          <div style="width: 100%; text-align: center;">
+            <img src="static/images/exp_comp_h2o.png" alt="exp_comp_h2o" style="max-width: 100%; height: auto; display: inline-block;">
           </div>
-          <div class="column is-centered has-text-centered">
-            <img src="static/images/exp_comp_h2o_quan.png" alt="method" width="700px"/>
+          <div style="width: 100%; text-align: center;">
+            <img src="static/images/exp_comp_h2o_quan.png" alt="exp_comp_h2o_quan" style="max-width: 100%; height: auto; display: inline-block;">
           </div>
       </div>
     </div>
@@ -236,8 +236,8 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-12">
         <h2 class="title is-3">Comparisons on TACO</h2>
-          <div class="column is-centered has-text-centered">
-            <img src="static/images/exp_comp_taco.png" alt="method" width="700px"/>
+          <div style="width: 100%; text-align: center;">
+            <img src="static/images/exp_comp_taco.png" alt="exp_comp_taco" style="max-width: 100%; height: auto; display: inline-block;">
           </div>
       </div>
     </div>
@@ -249,8 +249,8 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-12">
         <h2 class="title is-3">Real-World Generalization</h2>
-          <div class="column is-centered has-text-centered">
-            <img src="static/images/exp_itw.png" alt="method" width="700px"/>
+          <div style="width: 100%; text-align: center;">
+            <img src="static/images/exp_itw.png" alt="exp_itw" style="max-width: 100%; height: auto; display: inline-block;">
           </div>
       </div>
     </div>
@@ -262,12 +262,12 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-12">
         <h2 class="title is-3">Effect of Conditioning Modalities</h2>
-          <div class="column is-centered has-text-centered">
-            <img src="static/images/exp_guide.png" alt="method" width="700px"/>
+          <div style="width: 100%; text-align: center;">
+            <img src="static/images/exp_guide.png" alt="exp_guide" style="max-width: 100%; height: auto; display: inline-block;">
           </div>
-		        <p class="content has-text-justified">
-              TBD
-            </p>
+          <!-- <p class="content has-text-justified">
+            TBD
+          </p> -->
       </div>
     </div>
   </div>
@@ -278,12 +278,12 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-12">
         <h2 class="title is-3">Backbone of Image Completion</h2>
-          <div class="column is-centered has-text-centered">
-            <img src="static/images/exp_recon.png" alt="method" width="700px"/>
+          <div style="width: 100%; text-align: center;">
+            <img src="static/images/exp_recon.png" alt="exp_recon" style="max-width: 100%; height: auto; display: inline-block;">
           </div>
-		        <p class="content has-text-justified">
-              TBD
-            </p>
+          <!-- <p class="content has-text-justified">
+            TBD
+          </p> -->
       </div>
     </div>
   </div>
@@ -294,12 +294,12 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-12">
         <h2 class="title is-3">3D Egocentric Hand Pose Estimation from Exocentric View</h2>
-          <div class="column is-centered has-text-centered">
-            <img src="static/images/exp_egopose.png" alt="method" width="700px"/>
+          <div style="width: 100%; text-align: center;">
+            <img src="static/images/exp_egopose.png" alt="exp_egopose" style="max-width: 100%; height: auto; display: inline-block;">
           </div>
-		        <p class="content has-text-justified">
-              TBD
-            </p>
+          <!-- <p class="content has-text-justified">
+            TBD
+          </p> -->
       </div>
     </div>
   </div>
@@ -310,12 +310,12 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-12">
         <h2 class="title is-3">Incorrect Conditioning Modalities</h2>
-          <div class="column is-centered has-text-centered">
-            <img src="static/images/exp_incrt.png" alt="method" width="700px"/>
+          <div style="width: 100%; text-align: center;">
+            <img src="static/images/exp_incrt.png" alt="exp_incrt" style="max-width: 100%; height: auto; display: inline-block;">
           </div>
-		        <p class="content has-text-justified">
-              TBD
-            </p>
+          <!-- <p class="content has-text-justified">
+            TBD
+          </p> -->
       </div>
     </div>
   </div>
@@ -326,237 +326,16 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-12">
         <h2 class="title is-3">Generation Consistency</h2>
-          <div class="column is-centered has-text-centered">
-            <img src="static/images/exp_consi.png" alt="method" width="700px"/>
+          <div style="width: 100%; text-align: center;">
+            <img src="static/images/exp_consi.png" alt="exp_consi" style="max-width: 100%; height: auto; display: inline-block;">
           </div>
-		        <p class="content has-text-justified">
-              TBD
-            </p>
+          <!-- <p class="content has-text-justified">
+            TBD
+          </p> -->
       </div>
     </div>
   </div>
 </section> 
-
-
-<!-- 
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title has-text-centered">Results of Text-to-Hand Image Generation</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen1.png" alt="exp_gen1" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen2.png" alt="exp_gen2" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen3.png" alt="exp_gen3" width="800px"/>
-      </div>
-      <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen4.png" alt="exp_gen4" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen5.png" alt="exp_gen5" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen6.png" alt="exp_gen6" width="800px"/>
-      </div>
-      <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen7.png" alt="exp_gen7" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen8.png" alt="exp_gen8" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen9.png" alt="exp_gen9" width="800px"/>
-      </div>
-      <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen10.png" alt="exp_gen10" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen11.png" alt="exp_gen11" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen12.png" alt="exp_gen12" width="800px"/>
-      </div>
-      <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen13.png" alt="exp_gen13" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen14.png" alt="exp_gen14" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen15.png" alt="exp_gen15" width="800px"/>
-      </div>
-      <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen16.png" alt="exp_gen16" width="800px"/>
-      </div>
-	  <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen17.png" alt="exp_gen17" width="800px"/>
-      </div>
-    <div class="column is-centered has-text-centered">
-        <img src="static/images/exp_gen18.png" alt="exp_gen18" width="800px"/>
-      </div>
-  </div>
-</div>
-</div>
-</section>
-
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title has-text-centered">Results of 3D Hand Mesh Reconstruction on MSCOCO</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/exp_mesh1.png" alt="exp_mesh1" width="800px"/>
-        </div>
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/exp_mesh2.png" alt="exp_mesh2" width="800px"/>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title has-text-centered">Results of 3D Hand Mesh Reconstruction on Re:InterHand</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/exp_mesh3.png" alt="exp_mesh3" width="800px"/>
-        </div>
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/exp_mesh4.png" alt="exp_mesh4" width="800px"/>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<section class="section hero">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Method</h2>
-		<div class="column is-centered has-text-centered">
-          <img src="static/images/TAS.png" alt="TAS" width="700px"/>
-		</div>
-		<p class="content has-text-justified">
-      <b>Overall process of the text attention stage (TAS).</b>
-      TAS attends on hand-related tokens from the given text prompt by leveraging attention maps.
-      Specifically, TAS extracts hand-related attention maps (i.e., <i>holding</i> and <i>hand</i>), and these attention maps are updated to highlight hand-related regions by the refinement based on the softmax operation and Gaussian filter.
-      With TAS, we can obtain more hand-focused images than before.
-        </p>
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/VAS.png" alt="VAS" width="500px"/>
-        </div>
-        <p class="content has-text-justified">
-          <b>Overall process of the visual attention stage (VAS).</b>
-          VAS attends on hand-related regions by conditioning global and local hand mesh images with the SD-based pipeline.
-          With global and local information, AttentionHand can be jointly optimized to reflect the global context (i.e., in-the-wild background) and local context (i.e., hand-focused foreground.)
-          In the end of the conditioning phase, we finally get the diffusion feature, which is decoded to new hand images in the decoding phase. 
-          Hence, AttentionHand can generate well-aligned hand images with the given mesh image and text prompt for the 3D hand mesh reconstruction in the wild. 
-        </p>
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/optimization.png" alt="optimization" width="500px"/>
-        </div>
-        <p class="content has-text-justified">
-          <b>Overall process of the optimization of AttentionHand.</b>
-          By global and local denoising of updated noisy embeddings with t diffusion steps, we obtain global and local predicted noises.
-          They are optimized by L2 loss with global and local residual noises. 
-          Note that global and local denoising networks share weights.
-        </p>
-      </div>
-    </div>
-  </div>
-</section> 
-
-<section class="section hero is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Exploration of Text Attention Stage</h2>
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/exp_TAS.png" alt="exp_TAS" width="700px"/>
-        </div>
-		    <p class="content has-text-justified">
-          Attention maps are well described their corresponding tokens in the case of with TAS. 
-          It implies that with TAS, AttentionHand can reflect hand-related tokens enough compare to the case of without TAS.
-        </p>
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/exp_Gaussian.png" alt="exp_Gaussian" width="700px"/>
-        </div>
-        <p class="content has-text-justified">
-          <b>(1) Ablation study for Gaussian filter.</b>
-          In the case of no/random Gaussian filter, the hand was disappeared or its shape became strange.
-          Howver, in the case of fixed Gaussian filter, generated images are well-aligned with given hand mesh images and look natural.
-          Hence, we determined fixed Gaussian filter makes the generated image plausibly regardless of diffusion timestep.
-          <br>
-          <b>(2) Ablation study for our loss.</b>
-          While the load balancing loss flattens the 2D attention map as 1D representation, leading to distort spatial knowledge, our loss updates the image embedding based on the spatial information of the attention map.
-          Therefore, generated images with our loss are well-fit with given hand mesh images.
-          <br>
-          <b>(3) Ablation study for regularization of updated noise.</b>
-          If the regularization term is randomly set, the updated noise tends to be out of distribution.
-          Specifically, generated images are not aligned with given mesh images, or missed some hands. 
-          Therefore, it is necessary to regularize the updated noise for faithful hand image generation.
-        </p>
-      </div>
-    </div>
-  </div>
-</section> 
-
-<section class="section hero">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Model Design Justification</h2>
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/table_comparison.png" alt="table_comparison" width="700px"/>
-        </div>
-		    <p class="content has-text-justified">
-          To justify our model's superiority, we compared the characteristics of prior works including our model.
-          As shown in the table, our model's distinctive and potential features compared to prior works are (1) harmonious preservation of locality (i.e., hand) with globality (i.e., in-the-wild scene), and (2) selective attention on hand-related tokens by cross attention.
-        </p>
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/table_VAS.png" alt="table_VAS" width="700px"/>
-        </div>
-        <p class="content has-text-justified">
-          Specifically, to harmonize globality and locality, we developed global and local designs for the visual attention stage (VAS).
-          Moreover, since the global and local branches are designed structurally same, we set them to share their weights for reducing the number of training parameters and improving the generalizability.
-          We experimentally verified the effectiveness of our design as shown in the table.
-        </p>
-      </div>
-    </div>
-  </div>
-</section> 
-
-<section class="section hero is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Robustness of Our Generated Dataset</h2>
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/exp_multi.png" alt="exp_multi" width="700px"/>
-        </div>
-		    <p class="content has-text-justified">
-          To verify robustness of our generated dataset, we generated multiple hand images from same modalities as shown in the figure.
-          As a result, all generated images are perfectly well-aligned with given hand mesh images. 
-        </p>
-        <div class="column is-centered has-text-centered">
-          <img src="static/images/exp_tsne.png" alt="exp_tsne" width="700px"/>
-        </div>
-        <p class="content has-text-justified">
-          Moreover, we found the t-SNE distribution of AttentionHand is broader than MSCOCO as shown in the figure.
-          As a result, we believe that AttentionHand can contribute to the downstream task with our extensive in-the-wild hand images, leading to alleviate the domain gap between indoor and outdoor scenes.
-        </p>
-      </div>
-    </div>
-  </div>
-</section> -->
 
 
 <section class="section hero" id="BibTeX">
