--- a/index.html
+++ b/index.html
@@ -341,13 +341,17 @@
 <section class="section hero" id="BibTeX">
   <div class="container is-max-widescreen">
     <h2 class="title">BibTeX</h2>
-    <div style="max-width: 100%; overflow-x: auto;">
-      <pre style="margin: 0; white-space: pre-wrap; word-break: break-all;"><code>@article{park2025egoworld,
-  author    = {Park, Junho and Ye, Andrew Sangwoo and Kwon, Taein},
-  title     = {EgoWorld: Translating Exocentric View to Egocentric View using Rich Exocentric Observations},
-  journal   = {arXiv preprint arXiv:2506.17896},
-  year      = {2025},
-}</code></pre>
+    <div style="width: 100%; overflow-x: auto;">
+      <pre style="margin: 0; white-space: pre-wrap; word-break: break-all;">
+        <code>
+          @article{park2025egoworld,
+            author    = {Park, Junho and Ye, Andrew Sangwoo and Kwon, Taein},
+            title     = {EgoWorld: Translating Exocentric View to Egocentric View using Rich Exocentric Observations},
+            journal   = {arXiv preprint arXiv:2506.17896},
+            year      = {2025},
+          }
+        </code>
+      </pre>
     </div>
   </div>
 </section>
