--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 <section class="section hero" id="BibTeX">
   <div class="container is-max-widescreen">
     <h2 class="title">BibTeX</h2>
-    <div style="width: 100%; overflow-x: auto;">
+    <div style="max-width: 100%; overflow-x: auto;">
       <pre style="margin: 0; white-space: pre-wrap; word-break: break-all;">
         <code>
           @article{park2025egoworld,
